more tests for instantiating components and providers